// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`shallow singleTags template escapes HTML special characters in template 1`] = `
<tag
  data-is={
    Array [
      "tag",
    ]
  }
>
  <p>
    "&&lt;&gt;
  </p>
</tag>
`;

exports[`shallow singleTags template extracts template 1`] = `
<tag
  data-is={
    Array [
      "tag",
    ]
  }
>
  <p>
    Hello, world!
  </p>
</tag>
`;

exports[`shallow singleTags template renders ignoring style 1`] = `
<static
  data-is={
    Array [
      "static",
    ]
  }
>
  <p>
    Hello, world!
  </p>
</static>
`;

exports[`shallow singleTags template renders static tag 1`] = `
<static
  data-is={
    Array [
      "static",
    ]
  }
>
  <p>
    Hello, world!
  </p>
</static>
`;

exports[`shallow singleTags template template "each" work 1`] = `
<tag
  data-is={
    Array [
      "tag",
    ]
  }
>
  <p>
    A
  </p>
  <p>
    B
  </p>
  <p>
    C
  </p>
  
</tag>
`;
